--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,9 +31,7 @@ jobs:
           static_site_generator: next
 
       - name: Build with Next.js
-        run: |
-          npm run build
-          npm run export
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
